[metadata]
name = leviathan
version = 0.1.0
description = A Minecraft: Bedrock Edition server software written in Python
url = https://github.com/snakedragondevs/leviathan
author = Clark Dwain Luna
author_email = lclarkdwain@outlook.com
license = MIT

[options]
packages = find:
install_requires =
    enum34
    protobuf
    twisted
tests_require =
    coverage
    nose
    mock
test_suite = nose.collector
include_package_data = true
zip_safe = true

[options.entry_points]
console_scripts =
    leviathan = leviathan.__main__:main

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119